fix button margin on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -561,7 +561,7 @@ footer a:hover {
     }
 
     .buttonwrapper {
-        margin-top: 22px;
+        margin-top: 30px;
     }
 
     #infotext {
